--- a/salvus/package.json
+++ b/salvus/package.json
@@ -44,6 +44,7 @@
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
     "moment": "^2.9.0",
+    "node-cjsx": "^1.0.0",
     "node-sass": "^3.3.3",
     "node-uuid": "^1.4.2",
     "nodeunit": "^0.9.0",
