--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ salvus/rethinkdb_data/
 salvus/static/primus/primus-engine.js
 salvus/static/primus/primus-engine.min.js
 salvus/restart_hub
+salvus/.coffee/
