--- a/salvus/package.json
+++ b/salvus/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.12.2",
     "cjsx-loader": "^2.0.1",
     "codemirror": "^5.7.0",
+    "coffee-cache": "^1.0.2",
     "coffee-loader": "^0.7.2",
     "coffee-react": "^4.0.0",
     "coffee-react-transform": "^3.2.0",
@@ -78,7 +79,6 @@
     "sendgrid": "^1.9.2",
     "sha1": "^1.1.1",
     "sockjs": "^0.3.12",
-    "sqlite3": "^3.0.5",
     "start-stop-daemon": "^0.1.0",
     "stripe": "^3.2.0",
     "style-loader": "^0.12.4",
