testing/linting/coverage support for smc-common

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,7 @@ salvus/conf/tinc_hosts/
 
 # mocha: banket coverage report
 salvus/coverage
+salvus/*/coverage
 # comes up when testing in that directory
 salvus/rethinkdb_data/
 
