--- a/salvus/smc-webapp/package.json
+++ b/salvus/smc-webapp/package.json
@@ -35,9 +35,13 @@
   "devDependencies": {
     "coffee-script": "^1.9.3",
     "coffeelint": "^1.10.1",
-    "coffeelint-cjsx": "git://github.com/sagemathinc/coffeelint-cjsx.git"
+    "coffeelint-cjsx": "git://github.com/sagemathinc/coffeelint-cjsx.git",
+    "expect": "^1.12.2",
+    "mocha": "^2.3.3",
+    "jsdom": ">= 0.1.23 < 4.0.0"
   },
   "scripts": {
+    "test": "SMC_TEST=true node_modules/.bin/mocha --reporter progress",
     "lint": "node_modules/.bin/coffeelint -f ../smc-common/coffeelint.json -c *.coffee *.cjsx"
   },
   "repository": {
