--- a/salvus/smc-webapp/package.json
+++ b/salvus/smc-webapp/package.json
@@ -33,16 +33,19 @@
     "underscore": "^1.7.0"
   },
   "devDependencies": {
+    "coffee-coverage": "^0.6.3",
     "coffee-script": "^1.9.3",
     "coffeelint": "^1.10.1",
     "coffeelint-cjsx": "git://github.com/sagemathinc/coffeelint-cjsx.git",
     "expect": "^1.12.2",
-    "mocha": "^2.3.3",
-    "jsdom": ">= 0.1.23 < 4.0.0"
+    "istanbul": "^0.4.0",
+    "jsdom": ">= 0.1.23 < 4.0.0",
+    "mocha": "^2.3.3"
   },
   "scripts": {
     "test": "SMC_TEST=true node_modules/.bin/mocha --reporter progress",
-    "lint": "node_modules/.bin/coffeelint -f ../smc-common/coffeelint.json -c *.coffee *.cjsx"
+    "lint": "node_modules/.bin/coffeelint -f ../smc-common/coffeelint.json -c *.coffee *.cjsx",
+    "coverage": "rm -rf ./coverage/; SMC_TEST=true node_modules/.bin/mocha --require ./coffee-coverage-loader.js && node_modules/.bin/istanbul report text html"
   },
   "repository": {
     "type": "git",
