--- a/salvus/smc-common-node/package.json
+++ b/salvus/smc-common-node/package.json
@@ -14,6 +14,7 @@
     "coffee-register-cache": "0.0.0",
     "coffee-script": "^1.10.0",
     "sqlite3": "^3.1.0",
+    "temp": "^0.8.3",
     "winston": "^1.1.1"
   },
   "repository": {
