--- a/salvus/smc-hub/package.json
+++ b/salvus/smc-hub/package.json
@@ -54,7 +54,11 @@
     "should-sinon": "0.0.3",
     "sinon": "^1.15.3"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "SMC_TEST=true node_modules/.bin/mocha --reporter progress",
+    "coverage": "rm -rf ./coverage/; SMC_TEST=true node_modules/.bin/mocha --require ./coffee-coverage-loader.js && node_modules/.bin/istanbul report text html",
+    "lint": "node_modules/.bin/coffeelint -c *.coffee"      
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/sagemathinc/smc"
