--- a/salvus/smc-hub/package.json
+++ b/salvus/smc-hub/package.json
@@ -42,14 +42,15 @@
     "winston": "^0.9.0"
   },
   "devDependencies": {
-    "npm-check-updates": "^2.3.2",
-    "coffeelint": "^1.10.1",
     "coffee-coverage": "^0.6.2",
     "coffee-script": "^1.9.3",
+    "coffeelint": "^1.10.1",
     "coveralls": "^2.11.2",
+    "expect": "^1.12.2",
     "istanbul": "^0.3.15",
     "mocha": "*",
     "mocha-lcov-reporter": "1.0.0",
+    "npm-check-updates": "^2.3.2",
     "should": "^7.0.1",
     "should-sinon": "0.0.3",
     "sinon": "^1.15.3"
@@ -57,7 +58,7 @@
   "scripts": {
     "test": "SMC_TEST=true node_modules/.bin/mocha --reporter progress",
     "coverage": "rm -rf ./coverage/; SMC_TEST=true node_modules/.bin/mocha --require ./coffee-coverage-loader.js && node_modules/.bin/istanbul report text html",
-    "lint": "node_modules/.bin/coffeelint -c *.coffee"      
+    "lint": "node_modules/.bin/coffeelint -c *.coffee"
   },
   "repository": {
     "type": "git",
