--- a/salvus/smc-hub/package.json
+++ b/salvus/smc-hub/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "blocked": "^1.1.0",
+    "body-parser": "^1.14.1",
     "coffee-cache": "^1.0.2",
     "coffee-loader": "^0.7.2",
     "commander": "^2.6.0",
