--- a/salvus/package.json
+++ b/salvus/package.json
@@ -32,8 +32,8 @@
   "devDependencies": {
   },
   "scripts": {
-    "test": "cd smc-common; npm test && cd ../smc-webapp; npm test && cd ../smc-common-node; npm test && cd ../smc-hub; npm test",
-    "coverage": "cd smc-common; npm run coverage && cd ../smc-webapp; npm run coverage && cd ../smc-common-node; npm run coverage && cd ../smc-hub; npm run coverage",
+    "test": "cd smc-util; npm test && cd ../smc-webapp; npm test && cd ../smc-util-node; npm test && cd ../smc-hub; npm test",
+    "coverage": "cd smc-util; npm run coverage && cd ../smc-webapp; npm run coverage && cd ../smc-util-node; npm run coverage && cd ../smc-hub; npm run coverage",
     "webpack": "cd $SALVUS_ROOT; webpack -d --progress --colors",
     "webpack-watch": "cd $SALVUS_ROOT; webpack --debug --output-pathinfo --progress --colors --watch",
     "webpack-watch-map": "cd $SALVUS_ROOT; webpack -d --progress --colors --watch",
