--- a/salvus/smc-util/package.json
+++ b/salvus/smc-util/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "smc-common-node",
+  "name": "smc-util",
   "version": "1.0.0",
-  "description": "SageMathCloud compute server code",
+  "description": "SageMathCloud code shared between the frontend and the backend",
   "main": "index.js",
   "scripts": {
     "test": "SMC_TEST=true node_modules/.bin/mocha --reporter progress",
@@ -15,11 +15,11 @@
     "coffee-cache": "^1.0.2",
     "coffee-register-cache": "0.0.0",
     "coffee-script": "^1.10.0",
-    "expect": "^1.12.2",
-    "mocha": "^2.3.3",
-    "sqlite3": "^3.1.0",
-    "temp": "^0.8.3",
-    "winston": "^1.1.1"
+    "coffeelint": "^1.13.0",
+    "immutable": "^3.7.5",
+    "node-uuid": "^1.4.3",
+    "sha1": "^1.1.1",
+    "underscore": "^1.8.3"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,11 @@
   },
   "devDependencies": {
     "coffee-coverage": "^0.6.3",
+    "expect": "^1.12.2",
     "istanbul": "^0.4.0",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "should": "^7.1.1",
+    "should-sinon": "0.0.3",
+    "sinon": "^1.17.2"
   }
 }
