--- a/salvus/smc-webapp/package.json
+++ b/salvus/smc-webapp/package.json
@@ -44,7 +44,7 @@
   },
   "scripts": {
     "test": "SMC_TEST=true node_modules/.bin/mocha --reporter progress",
-    "lint": "node_modules/.bin/coffeelint -f ../smc-common/coffeelint.json -c *.coffee *.cjsx",
+    "lint": "node_modules/.bin/coffeelint -f ../smc-util/coffeelint.json -c *.coffee *.cjsx",
     "coverage": "rm -rf ./coverage/; SMC_TEST=true node_modules/.bin/mocha --require ./coffee-coverage-loader.js && node_modules/.bin/istanbul report text html"
   },
   "repository": {
