--- a/salvus/package.json
+++ b/salvus/package.json
@@ -15,22 +15,21 @@
     "coffee-script": "^1.9.3",
     "coffeelint": "^1.10.1",
     "coffeelint-cjsx": "git://github.com/sagemathinc/coffeelint-cjsx.git",
-    "css-loader": "^0.19.0",
+    "css-loader": "^0.21.0",
     "file-loader": "^0.8.4",
     "html-loader": "^0.3.0",
     "json-loader": "^0.5.3",
     "node-cjsx": "^1.0.0",
     "node-sass": "^3.3.3",
-    "npm-check-updates": "^2.3.2",
+    "npm-check-updates": "^2.3.4",
     "sass-loader": "^3.0.0",
     "script-loader": "^0.6.1",
-    "style-loader": "^0.12.4",
+    "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "cd smc-util; npm test && cd ../smc-webapp; npm test && cd ../smc-util-node; npm test && cd ../smc-hub; npm test",
     "coverage": "cd smc-util; npm run coverage && cd ../smc-webapp; npm run coverage && cd ../smc-util-node; npm run coverage && cd ../smc-hub; npm run coverage",
