--- a/salvus/package.json
+++ b/salvus/package.json
@@ -31,13 +31,14 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "cd smc-util; npm test && cd ../smc-webapp; npm test && cd ../smc-util-node; npm test && cd ../smc-hub; npm test",
-    "coverage": "cd smc-util; npm run coverage && cd ../smc-webapp; npm run coverage && cd ../smc-util-node; npm run coverage && cd ../smc-hub; npm run coverage",
+    "test": "cd smc-util && npm test && cd ../smc-webapp && npm test && cd ../smc-util-node && npm test && cd ../smc-hub && npm test",
+    "coverage": "cd smc-util && npm run coverage && cd ../smc-webapp && npm run coverage && cd ../smc-util-node && npm run coverage && cd ../smc-hub && npm run coverage",
     "webpack": "cd $SALVUS_ROOT; webpack -d --progress --colors",
     "webpack-watch": "cd $SALVUS_ROOT; webpack --debug --output-pathinfo --progress --colors --watch",
     "webpack-watch-map": "cd $SALVUS_ROOT; webpack -d --progress --colors --watch",
     "webpack-production": "cd $SALVUS_ROOT; NODE_ENV=production webpack -p --progress --colors",
     "webpack-clean": "rm -rvf $SALVUS_ROOT/static/webpack"
+    "make": "cd smc-util && npm install && cd ../smc-webapp && npm install && cd .. && npm webpack-production && cd smc-util-node && npm install && cd ../smc-hub && npm install"
   },
   "repository": {
     "type": "git",
