--- a/salvus/smc-util-node/package.json
+++ b/salvus/smc-util-node/package.json
@@ -15,8 +15,6 @@
     "coffee-cache": "^1.0.2",
     "coffee-register-cache": "0.0.0",
     "coffee-script": "^1.10.0",
-    "expect": "^1.12.2",
-    "mocha": "^2.3.3",
     "sqlite3": "^3.1.0",
     "temp": "^0.8.3",
     "winston": "^1.1.1"
@@ -28,6 +26,7 @@
   "devDependencies": {
     "coffee-coverage": "^0.6.3",
     "istanbul": "^0.4.0",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "expect": "^1.12.2"
   }
 }
