--- a/salvus/package.json
+++ b/salvus/package.json
@@ -37,7 +37,7 @@
     "webpack-watch": "cd $SALVUS_ROOT; webpack --debug --output-pathinfo --progress --colors --watch",
     "webpack-watch-map": "cd $SALVUS_ROOT; webpack -d --progress --colors --watch",
     "webpack-production": "cd $SALVUS_ROOT; NODE_ENV=production webpack -p --progress --colors",
-    "webpack-clean": "rm -rvf $SALVUS_ROOT/static/webpack"
+    "webpack-clean": "rm -rvf $SALVUS_ROOT/static/webpack",
     "make": "cd smc-util && npm install && cd ../smc-webapp && npm install && cd .. && npm webpack-production && cd smc-util-node && npm install && cd ../smc-hub && npm install"
   },
   "repository": {
