sagews: refactor -- put SynchronizedWorksheet in a different file from SynchronizedDocument

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,6 @@ salvus/rethinkdb_data/
 salvus/static/primus/primus-engine.js
 salvus/static/primus/primus-engine.min.js
 salvus/restart_hub
-*.coffee*
+.coffee
 
 salvus/smc-hub/run/hub[0-9].js
