smc project refactor: create two new python libraries: smc_sagews and smc_pyutil which take care nicely of all the python project related code

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,7 @@ salvus/restart_hub
 .coffee
 
 salvus/smc-hub/run/hub[0-9].js
+
+salvus/smc_sagews/smc_sagews.egg-info/*
+salvus/smc_sagews/build/*
+.eggs
