--- a/salvus/smc-project/package.json
+++ b/salvus/smc-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sagemathcloud-project",
+  "name": "smc-project",
   "version": "1.0.0",
   "description": "SageMathCloud: project daemons",
   "main": "index.js",
@@ -10,12 +10,12 @@
     "coffee-script": "^1.10.0",
     "commander": "^2.9.0",
     "express": "^4.13.3",
+    "forever": "^0.15.1",
     "googlediff": "^0.1.0",
     "node-uuid": "^1.4.3",
     "posix": "^4.0.0",
     "pty.js": "^0.3.0",
     "serve-index": "^1.7.2",
-    "start-stop-daemon": "^0.1.1",
     "temp": "^0.8.3",
     "underscore": "^1.8.3",
     "winston": "^1.1.1"
@@ -47,5 +47,8 @@
     "ide",
     "math",
     "mathematics"
-  ]
+  ],
+  "bin": {
+    "smc-local-hub": "./bin/smc-local-hub"
+  }
 }
