--- a/salvus/smc-project/package.json
+++ b/salvus/smc-project/package.json
@@ -49,6 +49,7 @@
     "mathematics"
   ],
   "bin": {
-    "smc-local-hub": "./bin/smc-local-hub"
+    "smc-local-hub": "./bin/smc-local-hub",
+    "smc-console-server": "./bin/smc-console-server"
   }
 }
