--- a/salvus/package.json
+++ b/salvus/package.json
@@ -42,7 +42,7 @@
     "webpack-watch-map": "cd $SALVUS_ROOT; webpack -d --progress --colors --watch",
     "webpack-production": "cd $SALVUS_ROOT; NODE_ENV=production webpack -p --progress --colors",
     "webpack-clean": "rm -rvf $SALVUS_ROOT/static/webpack",
-    "install-all": "cd smc-util && npm install && cd ../smc-webapp && npm install && cd ../smc-util-node && npm install && cd ../smc-hub && npm install",
+    "install-all": "cd smc-util && npm install && cd ../smc-webapp && npm install && cd ../smc-util-node && npm install && cd ../smc-hub && npm install"
   },
   "repository": {
     "type": "git",
