make it so that .../router.html gives the new react-router based site...

--- a/salvus/smc-webapp/package.json
+++ b/salvus/smc-webapp/package.json
@@ -14,6 +14,7 @@
     "font-awesome": "^4.4.0",
     "formidable": "^1.0.17",
     "globalize": "^0.1.1",
+    "history": "^1.13.0",
     "htmlparser": "^1.7.7",
     "immutable": "^3.7.4",
     "jquery.payment": "git://github.com/stripe/jquery.payment.git",
@@ -26,6 +27,7 @@
     "react-bootstrap": "^0.27.1",
     "react-chosen": "^0.3.8",
     "react-dropzone-component": "felixrieseberg/React-Dropzone-Component",
+    "react-router": "^1.0.0-rc3",
     "react-select": "git://github.com/JedWatson/react-select.git",
     "react-timeago": "^2.2.1",
     "react-widgets": "^3.0.0",
