--- a/salvus/smc-webapp/package.json
+++ b/salvus/smc-webapp/package.json
@@ -28,6 +28,7 @@
     "react-chosen": "^0.3.8",
     "react-dropzone-component": "felixrieseberg/React-Dropzone-Component",
     "react-router": "^1.0.0-rc3",
+    "react-router-bootstrap": "^0.19.3",
     "react-select": "git://github.com/JedWatson/react-select.git",
     "react-timeago": "^2.2.1",
     "react-widgets": "^3.0.0",
