--- a/salvus/smc-webapp/package.json
+++ b/salvus/smc-webapp/package.json
@@ -26,6 +26,7 @@
     "react": "^0.14.0",
     "react-bootstrap": "^0.27.1",
     "react-chosen": "^0.3.8",
+    "react-dom": "^0.14.1",
     "react-dropzone-component": "felixrieseberg/React-Dropzone-Component",
     "react-router": "^1.0.0-rc3",
     "react-router-bootstrap": "^0.19.3",
