--- a/src/conf/cloud.sagemath.com/haproxy.cfg
+++ b/src/conf/cloud.sagemath.com/haproxy.cfg
@@ -83,7 +83,7 @@ frontend https
     reqrep ^([^\ :]*)\ /policies/(.*)     \1\ /static/policies/\2
     acl is_static path_beg /static
     use_backend static if is_static
-    acl is_hub path_beg /hub /cookies /blobs /invoice /upload /alive /auth /stats /registration /projects /help /settings /customize
+    acl is_hub path_beg /hub /cookies /blobs /invoice /upload /alive /auth /stats /registration /projects /help /settings /customize /base_url.js
     use_backend hub if is_hub
     acl is_proxy path_reg ^/[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}/port
     acl is_proxy path_reg ^/[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}/raw
