--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ src/*/coverage
 # comes up when testing in that directory
 src/rethinkdb_data/
 src/dev/project/rethinkdb_data/
+src/dev/project/ports/
 src/dev/public/rethinkdb_data/
 src/dev/smc/rethinkdb_data/
 src/dev/laptop/rethinkdb_data/
