--- a/src/smc-project/package.json
+++ b/src/smc-project/package.json
@@ -15,6 +15,7 @@
     "posix": "^4.0.0",
     "pty.js": "^0.3.0",
     "serve-index": "^1.7.2",
+    "start-stop-daemon": "^0.1.1",
     "temp": "^0.8.3",
     "underscore": "^1.8.3",
     "winston": "^1.1.1"
