--- a/src/smc-webapp/package.json
+++ b/src/smc-webapp/package.json
@@ -28,6 +28,7 @@
     "react-chosen": "^0.3.8",
     "react-dom": "^0.14.1",
     "react-dropzone-component": "felixrieseberg/React-Dropzone-Component",
+    "react-reorderable": "^0.2.3",
     "react-router": "^1.0.0-rc3",
     "react-router-bootstrap": "^0.19.3",
     "react-select": "git://github.com/JedWatson/react-select.git",
