--- a/src/smc-webapp/package.json
+++ b/src/smc-webapp/package.json
@@ -27,11 +27,13 @@
     "react-chosen": "^0.3.8",
     "react-dom": "^0.14.1",
     "react-dropzone-component": "felixrieseberg/React-Dropzone-Component",
+    "react-redux": "^4.0.0",
     "react-router": "^1.0.0-rc3",
     "react-router-bootstrap": "^0.19.3",
     "react-select": "git://github.com/JedWatson/react-select.git",
     "react-timeago": "^2.2.1",
     "react-widgets": "^3.0.0",
+    "redux": "^3.0.4",
     "three": "^0.73.0",
     "underscore": "^1.7.0"
   },
